fixed too big navbar on mobile portrait, fixed not visible squad guys description on ipad

--- a/styles/mobile.scss
+++ b/styles/mobile.scss
@@ -45,6 +45,13 @@ nav {
     display: none;
   }
 }
+
+@media (orientation: portrait) {
+  nav{
+    align-items: center;
+    height: 8vh;
+  }
+  }
 #showcase {
 
   
