--- a/styles/widescreen.scss
+++ b/styles/widescreen.scss
@@ -2,6 +2,8 @@ nav {
   padding: 1rem 0;
 }
 
+
+
 #showcase {
   height: 100%;
   #showcase-content {
@@ -16,8 +18,16 @@ nav {
 }
 
 #squad {
+
   .container {
-    padding: 2rem 0;
+    padding: 5rem 0;
+    .items {
+      .item {
+        .description {
+          overflow: visible;
+        }
+      }
+    }
   }
 }
 
